--- a/01_sass_basics_pj/sass/sass-basics.scss
+++ b/01_sass_basics_pj/sass/sass-basics.scss
@@ -23,31 +23,23 @@ a {
     font-size: 40px;
     background-color: #ffcccc;
 
-    // border-radius: 20px;
-    // border: 3px solid #f00;
+    border-radius: 20px;
+    border: 3px solid #f00;
     box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
-
-    // & = 자기자신을 지칭, 즉 여기선 #box1
-    // #box1 의 바로 하위요소 a 를 선택하고자 할 때
-    // & > a
 
     &:hover {
       background-color: #ccc;  
+      @media screen and (max-width: 500px) {
+        background-color: #999;
+      }
     }
 
-    &, &-title {
-      border-radius: 20px;
-      border: 3px solid #f00;
+    @media screen and (max-width: 500px) {
+      font-size: 20px;
     }
 
-    // & 은 자기 자신을 지칭, 자기 자신을 나타내는 이름 그대로도 나타낸다.
-    //  & = #box1. 즉, #box1-title = &-title 로도 쓸 수 있다.
-    // #box1-title
-    &-title {
-      // border-radius: 20px;
-      // border: 3px solid #f00;
-      font-style: italic;
-      text-decoration: underline;
+    @media screen and (min-width: 501px) and (max-width: 900px) {
+      font-size: 24px;
     }
 
     & > a {
@@ -60,20 +52,6 @@ a {
     }
     
 }
-
-// #box1 > a {
-//     color: #a22;
-//     text-decoration: none;
-// }
-
-// #box1 > a:hover {
-//     color: #000;
-//     text-decoration: underline;
-// }
-
-// #box1:hover {
-//     background-color: #ccc;
-// }
 
 #box1 #box2 {
     font-size: 20px;
@@ -93,12 +71,13 @@ a {
     }
 }
 
-// #box1 #box2 > a {
-//     color: #ee6633;
-//     text-decoration: none;
+// @media screen and (max-width: 500px) {
+//   #box1 {
+//     font-size: 20px;
+//   }
 // }
-
-// #box1 #box2 > a:hover {
-//     color: #a22;
-//     text-decoration: underline;
+// @media screen and (min-width: 501px) and (max-width: 900px) {
+//   #box1 {
+//     font-size: 24px;
+//   }
 // }
