--- a/01_sass_basics_pj/css/sass-basics.css
+++ b/01_sass_basics_pj/css/sass-basics.css
@@ -1,3 +1,9 @@
+#box1, #box1 #box2 {
+  border-radius: 20px;
+  border: 3px solid #f00;
+  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+}
+
 html {
   font-size: 18px;
 }
@@ -20,9 +26,6 @@ a {
 #box1 {
   font-size: 40px;
   background-color: #ffcccc;
-  border-radius: 20px;
-  border: 3px solid #f00;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 #box1:hover {
@@ -60,9 +63,6 @@ a {
 #box1 #box2 {
   font-size: 20px;
   background-color: #e9e9e9;
-  border-radius: 20px;
-  border: 3px solid #f00;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 #box1 #box2 > a {
