--- a/01_sass_basics_pj/sass/sass-basics.scss
+++ b/01_sass_basics_pj/sass/sass-basics.scss
@@ -1,90 +1,84 @@
 // mixin
-@mixin fontSizeBgColor($fontSize:20px, $bgColor:#fff) {
+@mixin fontSizeBgColor($fontSize: 20px, $bgColor: #fff) {
   font-size: $fontSize;
   background-color: $bgColor;
 }
-// 기본 인자 값이 none 으로 되어 있어서 없을 경우 기본값이 적용된다.
-// & > a {} 영역 참고
 @mixin linkStyle($textColor, $textDeco: none) {
   color: $textColor;
-  text-decoration: $textDeco; 
+  text-decoration: $textDeco;
+}
+
+// extend
+%boxShape {
+  border-radius: 20px;
+  border: 3px solid #f00;
+  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 html {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 body {
-    margin: 20px;
-    background-color: #fff4cf;
+  margin: 20px;
+  background-color: #fff4cf;
 }
 
 div {
-    color: #333;
-    padding: 20px;
+  color: #333;
+  padding: 20px;
 }
 
 a {
-    display: inline-block;
-    margin: 10px 0;
+  display: inline-block;
+  margin: 10px 0;
 }
 
 #box1 {
-    // font-size: 40px;
-    // background-color: #ffcccc;
+  @include fontSizeBgColor(40px, #ffcccc);
 
-    @include fontSizeBgColor(40px, #ffcccc);
+  // border-radius: 20px;
+  // border: 3px solid #f00;
+  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 
-    border-radius: 20px;
-    border: 3px solid #f00;
-    box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  @extend %boxShape;
 
-    &:hover {
-      background-color: #ccc;  
-      @media screen and (max-width: 500px) {
-        background-color: #999;
-      }
-    }
-
+  &:hover {
+    background-color: #ccc;
     @media screen and (max-width: 500px) {
-      font-size: 20px;
+      background-color: #999;
     }
+  }
 
-    @media screen and (min-width: 501px) and (max-width: 900px) {
-      font-size: 24px;
-    }
+  @media screen and (max-width: 500px) {
+    font-size: 20px;
+  }
 
-    & > a {
-      // color: #a22;
-      // text-decoration: none;  
-      @include linkStyle(#a22);
-      &:hover {
-        // color: #000;
-        // text-decoration: underline;
-        @include linkStyle(#000, underline);
-      }
+  @media screen and (min-width: 501px) and (max-width: 900px) {
+    font-size: 24px;
+  }
+
+  & > a {
+    @include linkStyle(#a22);
+    &:hover {
+      @include linkStyle(#000, underline);
     }
-    
+  }
 }
 
 #box1 #box2 {
-    // font-size: 20px;
-    // background-color: #e9e9e9;
+  @include fontSizeBgColor(20px, #e9e9e9);
 
-    @include fontSizeBgColor($bgColor: #e9e9e9);
+  // border-radius: 20px;
+  // border: 3px solid #f00;
+  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 
-    border-radius: 20px;
-    border: 3px solid #f00;
-    box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  @extend %boxShape;
 
-    & > a {
-      // color: #ee6633;
-      // text-decoration: none;  
-      @include linkStyle(#ee6633);
-      &:hover {
-        // color: #a22;
-        // text-decoration: underline;
-        @include linkStyle(#a22, underline);
-      }
+  & > a {
+    @include linkStyle(#ee6633);
+    &:hover {
+      @include linkStyle(#a22, underline);
     }
+  }
 }
