--- a/01_sass_basics_pj/sass/sass-basics.scss
+++ b/01_sass_basics_pj/sass/sass-basics.scss
@@ -1,19 +1,5 @@
-// mixin
-@mixin fontSizeBgColor($fontSize: 20px, $bgColor: #fff) {
-  font-size: $fontSize;
-  background-color: $bgColor;
-}
-@mixin linkStyle($textColor, $textDeco: none) {
-  color: $textColor;
-  text-decoration: $textDeco;
-}
-
-// extend
-%boxShape {
-  border-radius: 20px;
-  border: 3px solid #f00;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
-}
+@import "mixins";
+@import "partial/styles";
 
 html {
   font-size: 18px;
@@ -36,10 +22,6 @@ a {
 
 #box1 {
   @include fontSizeBgColor(40px, #ffcccc);
-
-  // border-radius: 20px;
-  // border: 3px solid #f00;
-  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 
   @extend %boxShape;
 
@@ -68,10 +50,6 @@ a {
 
 #box1 #box2 {
   @include fontSizeBgColor(20px, #e9e9e9);
-
-  // border-radius: 20px;
-  // border: 3px solid #f00;
-  // box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 
   @extend %boxShape;
 
