--- a/01_sass_basics_pj/css/sass-basics.css
+++ b/01_sass_basics_pj/css/sass-basics.css
@@ -1,7 +1,8 @@
 #box1, #box1 #box2 {
   border-radius: 20px;
   border: 3px solid #f00;
-  box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
 html {
