--- a/01_sass_basics_pj/css/boxes.css
+++ b/01_sass_basics_pj/css/boxes.css
@@ -1,3 +1,11 @@
+.box {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
 body {
   margin: 0;
   background-color: #efefef;
@@ -8,15 +16,31 @@ body {
   width: 300px;
   height: 300px;
   padding: 20px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
 }
 
 .box, .box-inner {
   border: 3px solid #00f;
+}
+
+@media screen and (max-width: 600px) {
+  .box {
+    width: 100%;
+    border: none;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 899px) {
+  .box {
+    border: 2px solid #00f;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .box {
+    width: 600px;
+    padding: 50px;
+    border: 10px solid #00f;
+  }
 }
 
 .box-inner {
@@ -30,4 +54,16 @@ body {
   font-size: 20px;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 600px) {
+  .box-inner-title {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 899px) {
+  .box-inner-title {
+    font-size: 30px;
+  }
 }
