--- a/02_lorem_pj/sass/index.scss
+++ b/02_lorem_pj/sass/index.scss
@@ -1,6 +1,9 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 @import "base/base";
 @import "base/animations";
 
 @import "layout/header";
+@import "layout/main";
+@import "layout/footer";
