[Lorem - Project] - main html
>> 메인 - 마크업 작업
>> 아이콘 - 구글 웹폰트 아이콘 적용
   1. https://google.github.io/material-design-icons/#getting-icons

   2. 구글 웹폰트 아이콘 cdn
   <link
        href="https://fonts.googleapis.com/icon?family=Material+Icons"
        rel="stylesheet">

   3. 아이콘 리스트
   https://material.io/resources/icons

--- a/02_lorem_pj/sass/abstracts/_variables.scss
+++ b/02_lorem_pj/sass/abstracts/_variables.scss
@@ -2,6 +2,6 @@ $color-primary: #285a91;
 $color-secondary: #1f9cfd;
 $color-white: #fff;
 
-$color-blue-dark: #3f4a56
+$color-blue-dark: #3f4a56;
 
 $color-grey-light: #b9b9b9;
