--- a/02_lorem_pj/css/index.css
+++ b/02_lorem_pj/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Nanum+Gothic:wght@400;700;800&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +12,7 @@ html {
 }
 
 body {
-  padding: 3rem;
+  padding: 0rem;
   font-family: 'Nanum Gothic', sans-serif;
 }
 
