--- a/02_lorem_pj/css/index.css
+++ b/02_lorem_pj/css/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  padding: 0rem;
+  padding: 2rem;
   font-family: 'Nanum Gothic', sans-serif;
 }
 
@@ -82,6 +82,49 @@ body {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
+}
+
+h2 {
+  padding: 1rem 0;
+  font-size: 2.4rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  background: -webkit-gradient(linear, left top, right top, from(#285a91), to(#1f9cfd));
+  background: linear-gradient(left, #285a91 0%, #1f9cfd 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+h2:hover {
+  padding-left: 1.5rem;
+}
+
+h3 {
+  padding: .5rem 0;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #474747;
+  text-transform: uppercase;
+}
+
+.btn-text {
+  display: inline-block;
+  padding-bottom: .3rem;
+  border-bottom: 0.1rem solid #285a91;
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-decoration: none;
+  color: #285a91;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.btn-text:hover {
+  background-color: #1f9cfd;
+  color: #fff;
+  border-bottom: none;
 }
 
 header {
