--- a/02_lorem_pj/sass/index.scss
+++ b/02_lorem_pj/sass/index.scss
@@ -3,6 +3,9 @@
 
 @import "base/base";
 @import "base/animations";
+@import "base/typo";
+
+@import "components/button";
 
 @import "layout/header";
 @import "layout/main";
