--- a/02_lorem_pj/sass/index.scss
+++ b/02_lorem_pj/sass/index.scss
@@ -7,6 +7,7 @@
 @import "base/_utilities";
 
 @import "components/button";
+@import "components/nav";
 
 @import "layout/header";
 @import "layout/main";
