--- a/02_lorem_pj/css/index.css
+++ b/02_lorem_pj/css/index.css
@@ -158,6 +158,13 @@ h3 {
   text-align: center;
 }
 
+@media screen and (max-width: 700px) {
+  .nav-button {
+    top: 4rem;
+    right: 4rem;
+  }
+}
+
 .nav-bg {
   background-image: radial-gradient(#285a91, #1f9cfd);
   width: 7rem;
@@ -169,6 +176,13 @@ h3 {
   z-index: 1000;
   -webkit-transition: .8s;
   transition: .8s;
+}
+
+@media screen and (max-width: 700px) {
+  .nav-bg {
+    top: 4rem;
+    right: 4rem;
+  }
 }
 
 .nav-checkbox:checked ~ .nav-bg {
@@ -315,6 +329,13 @@ header #logo-text {
           animation-fill-mode: backwards;
 }
 
+@media screen and (max-width: 700px) {
+  header #logo-text {
+    left: 3rem;
+    font-size: 2rem;
+  }
+}
+
 header #header-text {
   position: absolute;
   left: 7rem;
@@ -322,6 +343,12 @@ header #header-text {
   color: #fff;
   letter-spacing: -.1rem;
   font-weight: 700;
+}
+
+@media screen and (max-width: 700px) {
+  header #header-text {
+    left: 3rem;
+  }
 }
 
 header #header-text-main {
@@ -337,6 +364,17 @@ header #header-text-main {
           animation-fill-mode: backwards;
 }
 
+@media screen and (max-width: 700px) {
+  header #header-text-main {
+    font-size: 3rem;
+    line-height: 1;
+    padding-right: 3rem;
+  }
+  header #header-text-main > br {
+    display: none;
+  }
+}
+
 header #header-text-sub {
   margin-top: 3rem;
   font-size: 2.4rem;
@@ -348,6 +386,13 @@ header #header-text-sub {
           animation-delay: 1.5s;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards;
+}
+
+@media screen and (max-width: 700px) {
+  header #header-text-sub {
+    padding-right: 3rem;
+    font-size: 1.2rem;
+  }
 }
 
 main::after {
@@ -370,10 +415,43 @@ main #section-about::after {
   clear: both;
 }
 
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+  main #section-about {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-about {
+    width: 100%;
+    padding-right: 6rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-about {
+    width: 100%;
+    height: 54rem;
+    padding-right: 6rem;
+  }
+}
+
 main #section-about-words {
   width: 65%;
   padding: 2rem 2rem 0 0;
   float: left;
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-about-words {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-about-words {
+    width: 100%;
+  }
 }
 
 main #section-about-words p {
@@ -389,12 +467,44 @@ main #section-about-photo {
   position: relative;
 }
 
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-about-photo {
+    width: 100%;
+    padding-top: 5rem;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-about-photo {
+    width: 100%;
+    padding-top: 3rem;
+    text-align: center;
+  }
+}
+
 main #section-about-photo .photo {
   position: absolute;
   width: 18rem;
   height: 12rem;
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-about-photo .photo {
+    position: static;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-about-photo .photo {
+    position: static;
+    display: inline-block;
+    width: 40%;
+    height: auto;
+  }
 }
 
 main #section-about-photo .photo:hover {
@@ -408,6 +518,18 @@ main #section-about-photo .photo:hover {
 main #section-about-photo .photo:nth-child(1) {
   left: 1rem;
   top: 3rem;
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-about-photo .photo:nth-child(1) {
+    margin-right: 2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-about-photo .photo:nth-child(1) {
+    margin-right: 1rem;
+  }
 }
 
 main #section-about-photo .photo:nth-child(2) {
@@ -427,8 +549,52 @@ main #section-etc {
   float: left;
 }
 
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+  main #section-etc {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-etc {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main #section-etc {
+    width: 100%;
+  }
+}
+
 main #section-etc [id^=etc-] {
-  height: 14rem;
+  min-height: 14rem;
+}
+
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+  main #section-etc .etc {
+    width: 33.33%;
+    float: left;
+    padding-bottom: 1rem;
+  }
+  main #section-etc .etc::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+}
+
+@media screen and (min-width: 701px) and (max-width: 899px) {
+  main #section-etc .etc {
+    width: 33.33%;
+    float: left;
+    padding-bottom: 1rem;
+  }
+  main #section-etc .etc::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
 }
 
 main #section-etc .etc:nth-child(1) {
