--- a/02_lorem_pj/sass/components/_nav.scss
+++ b/02_lorem_pj/sass/components/_nav.scss
@@ -16,6 +16,11 @@
         border-radius: 2px;
         box-shadow: 0 1rem 1rem rgba(0,0,0,.1);
         text-align: center;
+
+        @include mq('small-screen-3') {
+            top: 4rem;
+            right: 4rem;
+        }
     }
 
     &-bg {
@@ -28,6 +33,11 @@
         right: 8rem;
         z-index: 1000;
         transition: .8s;
+
+        @include mq('small-screen-3') {
+            top: 4rem;
+            right: 4rem;
+        }
     }
 
     &-checkbox:checked ~ .nav-bg {
