--- a/02_lorem_pj/sass/layout/_main.scss
+++ b/02_lorem_pj/sass/layout/_main.scss
@@ -10,11 +10,30 @@ main {
         float: left;
 
         @include clearfix();
+        @include mq('small-screen-1') {
+            width: 100%;
+        }
+        @include mq('small-screen-2') {
+            width: 100%;
+            padding-right: 6rem;
+        }
+        @include mq('small-screen-3') {
+            width: 100%;
+            height: 54rem;
+            padding-right: 6rem;
+        }
 
         &-words {
             width: 65%;
             padding: 2rem 2rem 0 0;
             float: left;
+
+            @include mq('small-screen-2') {
+                width: 100%;
+            }
+            @include mq('small-screen-3') {
+                width: 100%;
+            }
 
             p {
                 padding: 1.5rem 0;
@@ -29,11 +48,37 @@ main {
             float: left;
             position: relative;
 
+            @include mq('small-screen-2') {
+                width: 100%;
+                padding-top: 5rem;
+                text-align: center;
+            }
+            @include mq('small-screen-3') {
+                width: 100%;
+                padding-top: 3rem;
+                text-align: center;
+            }
+
             .photo {
                 position: absolute;
                 width: 18rem;
                 height: 12rem;
                 transition: .5s;
+
+                @include mq('small-screen-2') {
+                    position: static;
+                    display: inline-block;
+                    // top: 3rem !important;
+                    // left: 50% !important;
+                }
+                @include mq('small-screen-3') {
+                    // top: 3rem !important;
+                    // left: 50% !important;
+                    position: static;
+                    display: inline-block;
+                    width: 40%;
+                    height: auto;
+                }
 
                 &:hover {
                     transform: scale(1.1);
@@ -45,6 +90,14 @@ main {
                 &:nth-child(1) {
                     left: 1rem;
                     top: 3rem;
+                    @include mq('small-screen-2') {
+                        // transform: translateX(-120%);
+                        margin-right: 2rem;
+                    }
+                    @include mq('small-screen-3') {
+                        // transform: translateX(-120%);
+                        margin-right: 1rem;
+                    }
                 }
                 &:nth-child(2) {
                     left: 6rem;
@@ -64,11 +117,36 @@ main {
 
         width: 33.33%;
         float: left;
+        
+        @include mq('small-screen-1') {
+            width: 100%;
+        }
+        @include mq('small-screen-2') {
+            width: 100%;
+        }
+        @include mq('small-screen-3') {
+            width: 100%;
+        }
+
         [id^=etc-] {
-            height: 14rem;
+            min-height: 14rem;
         }
 
         .etc {
+            @include mq('small-screen-1') {
+                width: 33.33%;
+                float: left;
+                padding-bottom: 1rem;
+                @include clearfix();
+            }
+
+            @include mq('small-screen-2') {
+                width: 33.33%;
+                float: left;
+                padding-bottom: 1rem;
+                @include clearfix();
+            }
+
             &:nth-child(1) {
                background-color: $color-blue-1; 
             }
